Eliminación de estructura antigua y refactor del sistema